# woof-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
src/: main.rs
src/lib/: received.html  send.html
