[package]
name = "woof-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
flate2 = "1"
indicatif = "0.17.6"
tar = "0"
walkdir = "2.3.3"
zip = "0.6.6"
